--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
+
 
 jobs:
   test:
@@ -39,13 +41,15 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Create data directory
+      run: mkdir -p data
+
     - name: Run tests with coverage
       run: |
-        pytest --cov=./ --cov-report=term --cov-report=html -v
+        pytest tests/ --cov=. --cov-report=xml
 
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v4
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
       with:
-        name: coverage-report-py${{ matrix.python-version }}
-        path: htmlcov/
-        if-no-files-found: error
+        file: ./coverage.xml
+        fail_ci_if_error: true
